[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.log"
description = "oslo.log library"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://docs.openstack.org/oslo.log"
Repository = "https://opendev.org/openstack/oslo.log"

[project.optional-dependencies]
fixtures = [
    "fixtures>=3.0.0", # Apache-2.0/BSD
]
systemd = [
    "systemd-python>=234", # LGPLv2+
]

[project.entry-points."oslo.config.opts"]
"oslo.log" = "oslo_log._options:list_opts"

[project.scripts]
convert-json = "oslo_log.cmds.convert_json:main"

[tool.setuptools]
packages = ["oslo_log"]

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_context = true
strict = true
ignore_missing_imports = true
exclude = '(?x)(doc | releasenotes)'

[[tool.mypy.overrides]]
module = ["oslo_log.tests.*"]
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false
disallow_any_generics = false

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "S", "UP"]
ignore = [
    "UP031", # we want to test printf-style formatting
    "S101",  # assertions are only used for type narrowing
]

[tool.ruff.lint.per-file-ignores]
"oslo_log/tests/*" = ["S"]
