[metadata]
name = oslo.log
summary = oslo.log library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/oslo.log/latest
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    oslo_log

[extras]
fixtures =
  fixtures>=3.0.0 # Apache-2.0/BSD
systemd =
  systemd-python>=234 # LGPLv2+

[entry_points]
oslo.config.opts =
    oslo.log = oslo_log._options:list_opts
console_scripts =
    convert-json = oslo_log.cmds.convert_json:main

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = oslo_log/locale
domain = oslo_log

[update_catalog]
domain = oslo_log
output_dir = oslo_log/locale
input_file = oslo_log/locale/oslo_log.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo_log/locale/oslo_log.pot

[wheel]
universal = 1
