[metadata]
name = oslo.log
summary = oslo.log library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/oslo.log/latest
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_log

[extras]
fixtures =
  fixtures>=3.0.0 # Apache-2.0/BSD
systemd =
  systemd-python>=234 # LGPLv2+

[entry_points]
oslo.config.opts =
    oslo.log = oslo_log._options:list_opts
console_scripts =
    convert-json = oslo_log.cmds.convert_json:main
